--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,20 @@
 {
-  "name": "Bio Log",
-  "short_name": "Bio Log",
-  "description": "Quick bio-metric logging for Project Phoenix",
-  "start_url": "/",
+  "name": "BioLog",
+  "short_name": "BioLog",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#0f0f23",
-  "theme_color": "#0f0f23",
-  "orientation": "portrait",
+  "background_color": "#1a1a2e",
+  "theme_color": "#1a1a2e",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "https://via.placeholder.com/192", 
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "https://via.placeholder.com/512",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
